src/metrics/snapshots/big_code_analysis__metrics__loc__tests__lua_no_elseif_lloc.snap
---
source: src/metrics/loc.rs
expression: metric.loc
---
{
  "sloc": 9,
  "ploc": 9,
  "lloc": 5,
  "cloc": 0,
  "blank": 0,
  "sloc_average": 4.5,
  "ploc_average": 4.5,
  "lloc_average": 2.5,
  "cloc_average": 0.0,
  "blank_average": 0.0,
  "sloc_min": 9,
  "sloc_max": 9,
  "cloc_min": 0,
  "cloc_max": 0,
  "ploc_min": 9,
  "ploc_max": 9,
  "lloc_min": 5,
  "lloc_max": 5,
  "blank_min": 0,
  "blank_max": 0
}
